@@ -306,6 +306,27 @@ GnmPane GocLine.pane-resize-guide {
   /* See also GnmPane */
 }
 
+toolbar gocombobox {
+    /* Some spacing to make the arrow appear closer to the (correct) button */
+    padding-left: 3px;
+    padding-right: 3px;
+    margin: 0;
+}
+
+toolbar gocombobox button.toggle {
+    padding: 0;
+}
+
+toolbar combobox button.combo {
+    padding: 0;
+}
+
+toolbar combobox button.combo box {
+    padding: 0;
+    /* Unsure why something isn't symmetric.  */
+    padding-right: 2px;
+}
+
 #endif
 
 /* ------------------------------------------------------------------------- */
