@@ -2,6 +2,7 @@ Gnumeric 1.12.52
 
 Morten:
 	* Attach the vertical alignment selector to the toolbar.
+	* Improve the toolbar styling a bit.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.51
